--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <color name="colorPrimary">#03A9F4</color>
+    <color name="colorPrimary">#7dddd0</color>
     <color name="colorPrimaryDark">#212121</color>
-    <color name="colorAccent">#9E9E9E</color>
+    <color name="colorAccent">#dae4ea</color>
+    <color name="colorText">#2C2B4D</color>
 </resources>
